# Gator

./: README.md
gatorcode/radon/: BuildFastSpectrum_RnRate.cpp  RnRate.cpp  TrigRate_Rn.cp
gatorcode/scripts/: BuildFastSpectrum.cpp
gatorcode/source/: 60Co_calib.conf  GatorBATCalib.cpp  GatorFinalCalib.cpp  Makefile  sampleanalysis_Cs_v2.1  sampleanalysis_Cs_v2.1.cpp  sampleanalysis_v2.1.cpp
gatorcode/source/include/: GatorCalibFitters.h  GatorCalibFunc.h  GatorCounter.hh  GatorDataLoader.hh  GatorSampleAnalysis.hh  GatorStructs.h  SPEManager.hh  screenfncs.h  trigrate.hh
gatorcode/source/src/: GatorCalibFitters.cc  GatorCalibFunc.cc  GatorCalibScr.cc  GatorCounter.cc  GatorDataLoader.cc  GatorSampleAnalysis.cc  convert_histo_ENR.cc  formatdigits.cc  linecounts2.cc  loadSPE.cc  misc.cc  trigrate.cc
scripts/: .gitignore  1435869955.txt  BgFastSpectrum.cpp  BuildFastSpectrum.cpp  BuildManySpectra.cpp  CalibStability.cpp  EffCalcAll.py  EffCalcAll2.py  GatorCalibScr.cc  LineAnalysis.cpp  LinePreCalib.cpp  MakeLinesFitsCanv.cpp  SatActivity.cpp  ScaleMeanActiv.cpp  ShowCalib.cpp  clean.sh  ppb2Bq.cc
source/: .gitignore  CMakeLists.txt  Makefile  clean.sh
source/GatorCalib/: CMakeLists.txt  GatorBATCalib.cpp  GatorBATCalibGUI.cpp  GatorFinalCalib.cpp  GatorLLcalib.cpp
source/GatorCalib/configfiles/: 137Cs_calib.conf  228Th_calib.conf  54Mn_calib.conf  60Co_calib.conf  CalibArchive.conf
source/cmake/: install-symlinks.cmake
source/include/: BCHistoFitterFast.hh  GUI_LinkDef.h  GammaLineLikelihood.hh  GatorCalibClass.hh  GatorCalibClassLinkDef.h  GatorCalibFitters.h  GatorCalibFunc.h  GatorCalibGUIclass.hh  GatorCalibScr.h  GatorCounter.hh  GatorDataLoader.hh  GatorGlobals.hh  GatorLikelihoodClass.hh  GatorParam.hh  GatorSampleAnalysis.hh  GatorStructs.h  GatorTreeDataLoader.hh  LinkDef.h  SPEdata.hh  loadSPE.h  misc.h  screenfncs.h  trigrate.hh
source/include/GUI/: GatorCalibGUIClass.hh  LinkDef.h
source/sampleanalysis/: CMakeLists.txt  sample_rates.cpp  sampleanalysis_v2.1.cpp
source/src/: BCHistoFitterFast.cc  GammaLineLikelihood.cc  GatorCalibClass.cc  GatorCalibFitters.cc  GatorCalibFunc.cc  GatorCalibGUIclass.cc  GatorCalibScr.cc  GatorCounter.cc  GatorDataLoader.cc  GatorGlobals.cc  GatorLikelihoodClass.cc  GatorParam.cc  GatorSampleAnalysis.cc  GatorTreeDataLoader.cc  LineStruct.h  convert_histo_ENR.cc  convert_histo_ENR2.cc  formatdigits.cc  linecounts2.cc  loadSPE.cc  misc.cc  trigrate.cc
source/src/GUI/: GatorCalibGUIClass.cc
